--- a/index.html
+++ b/index.html
@@ -15,7 +15,35 @@
 
 <body>
     <div class="main-container">
-        <p>this is page</p>
+        <header>
+            <div class="logo">
+                <img src="img/logo.png" alt="Company logo">
+            </div>
+            <nav class="main-nav">
+            </nav>
+            <div class="box">
+                <p>Terms and Conditions</p>
+            </div>
+        </header>
+        <section class="box-terms">
+            <div class="terms">
+                <h1>Terms and Conditions</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book.
+                </p>
+                <div class="box-form">
+                    <form action="/">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="agree" onchange="isChecked(this, 'submit1')">
+                            <label class="form-check-label" for="agree">I agree with terms</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary" id="submit1">Submit</button>
+                    </form>
+                </div>
+
+            </div>
+
+        </section>
     </div>
 </body>
 
