--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 
@@ -32,13 +33,12 @@
                     book.
                 </p>
                 <div class="box-form">
-                    <form action="/">
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="agree" onchange="isChecked(this, 'submit1')">
                             <label class="form-check-label" for="agree">I agree with terms</label>
                         </div>
-                        <button type="submit" class="btn btn-primary" id="submit1">Submit</button>
-                    </form>
+                        <button type="submit" class="btn btn-primary" id="submit1" onclick="getDataForGeolocation()">Submit</button>
+                        <div id="message"></div>
                 </div>
 
             </div>
