Added function for get list of flights

--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
                             <label class="form-check-label" for="agree">I agree with terms</label>
                         </div>
                         <button type="submit" class="btn btn-primary" id="submit1" onclick="getDataForGeolocation()">Submit</button>
-                        <div id="message"></div>
+                        
                 </div>
 
             </div>
 
+        </section>
+        <section class="none">
+            <div id="message"></div>
+            <div id="list"></div>
         </section>
     </div>
 </body>
