--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <input type="checkbox" class="form-check-input" id="agree" onchange="isChecked(this, 'submit1')">
                             <label class="form-check-label" for="agree">I agree with terms</label>
                         </div>
-                        <button type="submit" class="btn btn-primary" id="submit1" onclick="getDataForGeolocation()">Submit</button>
+                        <button type="submit" class="btn btn-primary" id="submit1" disabled="disabled" onclick="getDataForGeolocation()">Submit</button>     
                         
                 </div>
 
